Add-on/Istio/destrule-realistic-00100-Service-sdb-data.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sdb-data
  namespace: mubench-realistic
spec:
  host: sdb-data
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
    outlierDetection:
      baseEjectionTime: 30s
      consecutive5xxErrors: 7
      interval: 30s
