Add-on/Istio/destrule-realistic-00200-Service-api.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: api
  namespace: mubench-realistic
spec:
  host: api
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
    outlierDetection:
      baseEjectionTime: 30s
      consecutive5xxErrors: 7
      interval: 30s
