Add-on/Istio/destrule-realistic-DeploymentNginxGw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: gw-nginx
  namespace: mubench-realistic
spec:
  host: gw-nginx
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
    outlierDetection:
      baseEjectionTime: 30s
      consecutive5xxErrors: 7
      interval: 30s
